# SignUpIn

./: .gitignore  README.md  manage.py  pyproject.toml
SignUpIn/: pyproject.toml  settings.py
SignUpIn/SignUpIn/: asgi.py  settings.py  urls.py  wsgi.py
SignUpIn/SignUpSignIn/: apps.py  backends.py  manager.py  urls.py  views.py
SignUpSignIn/: models.py  views.py
